--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/Users/admin/Library/Application Support/NetBeans/13/tomcat90.properties
-j2ee.server.home=/Users/admin/Documents/Document_FPT/SE_4/PRJ301/tomcat/apache-tomcat-10.0.27
-j2ee.server.instance=tomcat90:home=/Users/admin/Documents/Document_FPT/SE_4/PRJ301/tomcat/apache-tomcat-10.0.27
+deploy.ant.properties.file=C:\\Users\\letha\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+j2ee.server.home=D:/Document_FPT/SE_SU_25/PRJ301/tomcat/apache-tomcat-10.0.27
+j2ee.server.instance=tomcat90:home=D:\\Document_FPT\\SE_SU_25\\PRJ301\\tomcat\\apache-tomcat-10.0.27
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/Users/admin/Library/Application Support/NetBeans/13/build.properties
+user.properties.file=C:\\Users\\letha\\AppData\\Roaming\\NetBeans\\13\\build.properties
